更新 composer.json 中的 duxweb/dux-lite 版本至 ^2.0.3，并更新 composer.lock 文件以反映依赖项的变化。同时，修改 CloudServiceProvider.php 中的命令注册逻辑，使用 foreach 循环逐个添加命令。

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         }
     ],
     "require": {
-        "duxweb/dux-lite": "^2.0.2-dev",
+        "duxweb/dux-lite": "^2.0.3",
         "composer-plugin-api": "^2.0",
         "maennchen/zipstream-php": "^3.1"
     },
